api documentaion of employee handler completed (swagger)
